# windjammer-ui

./: .gitignore  .pre-commit-config.yaml  COMPONENT_CONVERSION_PLAN.md  Cargo.toml  DOGFOODING_GAPS_FOUND.md  EXAMPLE_APPS.md  LICENSE-APACHE  LICENSE-MIT  MIGRATION_PLAN.md  README.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.2.2.md  TECH_DEBT.md  V0.1.0_RELEASE_CHECKLIST.md  WJ_CLI_DX_IMPROVEMENTS.md  build-counter-demo.sh  build-wasm-example.sh  build-wasm.sh  build.rs  fix_generated.sh  serve_demo.wj  serve_example.wj  serve_wasm.wj  simple_app.html  test_builder_pattern.wj  todo_app.html  wj-build.sh
.githooks/: pre-commit
.github/: dependabot.yml
benches/: signal_benchmarks.rs
build_contact/: Cargo.toml  contact_form.rs  contact_form.rs.map
build_counter/: Cargo.toml  counter.rs  counter.rs.map
build_dashboard/: Cargo.toml  dashboard.rs  dashboard.rs.map
build_test/: Cargo.toml  test_builder_pattern.rs  test_builder_pattern.rs.map
build_text/: Cargo.toml  text.rs  text.rs.map
build_todo/: Cargo.toml  todo_app.rs  todo_app.rs.map
docs/: API_DESIGN_v0.3.0.md  API_REFERENCE.md  COMPILER_INTEGRATION.md  COMPILER_UI_INTEGRATION_COMPLETE.md  COMPONENT_MILESTONE.md  COMPONENT_ROADMAP.md  DESIGN_SYSTEM.md  DOGFOODING_COMPLETE_REPORT.md  EDITOR_ARCHITECTURE_DECISION.md  EDITOR_COMPLETE_SESSION_SUMMARY.md  EDITOR_COMPONENT_ARCHITECTURE.md  EDITOR_CURRENT_STATE.md  EDITOR_CURRENT_STATUS.md  EDITOR_EXISTING_IMPLEMENTATION.md  EDITOR_FEATURES_COMPLETE.md  EDITOR_IMPLEMENTATION_PLAN.md  EDITOR_IMPLEMENTATION_STATUS.md  EDITOR_INTEGRATION_COMPLETE.md  GUIDE.md  (+48 more)
(+237 files in other folders)
