[package]
name = "windjammer-app"
version = "0.1.0"
edition = "2021"

# Prevent this from being treated as part of parent workspace
[workspace]

[dependencies]
smallvec = "1.13"
serde = { version = "1.0", features = ["derive"] }
windjammer-runtime = { path = "/Users/jeffreyfriedman/src/wj/windjammer/crates/windjammer-runtime" }
windjammer-ui = { path = "/Users/jeffreyfriedman/src/wj/windjammer-ui", features = ["desktop"] }

[[bin]]
name = "counter"
path = "counter.rs"

[profile.release]
opt-level = 3
